--- a/projekt.Rmd
+++ b/projekt.Rmd
@@ -7,7 +7,7 @@ output:
     includes:
       in_header: lib/styles.sty
     latex_engine: xelatex
-runtime: shiny
+
 ---
 
 ```{r setup, echo=FALSE, results='hide', message=FALSE, warning=FALSE}
@@ -71,7 +71,7 @@ ggplot(obcine, aes(x=naselja)) + geom_histogram() +
 # Analiza in vizualizacija podatkov
 
 ```{r vizualizacija, echo=FALSE, message=FALSE, warning=FALSE, results='hide'}
-source("vizualizacija/vizualizacija.r", encoding="UTF-8")
+#source("vizualizacija/vizualizacija.r", encoding="UTF-8")
 ```
 
 Spodnji zemljevid prikazuje povprečno velikost družine za vsako občino.
@@ -106,5 +106,5 @@ ggplot(inner_join(obcine, data.frame(obcina=names(skupine),
 ***
 
 ```{r shiny, echo=FALSE}
-shinyAppDir("shiny", options=list(width="100%", height=600))
+#shinyAppDir("shiny", options=list(width="100%", height=600))
 ```
