--- a/projekt.Rmd
+++ b/projekt.Rmd
@@ -49,26 +49,35 @@ Vir podatkov: https://pxweb.stat.si/pxweb/Database/Regije/Regije.asp
 source("uvoz/uvoz.r", encoding="UTF-8")
 ```
 
-Uvozili smo podatke o občinah v obliki CSV s statističnega urada ter v obliki HTML
-z Wikipedije. Podatke imamo v dveh razpredelnicah v obliki *tidy data*.
+Uvozilia sem podatke o podjetjih v Sloveniji v obliki CSV s statističnega urada. Podatke imam v petih razpredelnicah v obliki *tidy data*.
 
-1. `druzine` - podatki o družinah za vsako občino
-  - `obcina` - spremenljivka: ime občine (neurejen faktor),
-  - `velikost.druzine` - spremenljivka: število otrok v družini (število: 1, 2, 3 ali 4, kjer zadnja vrednost pomeni 4 ali več),
-  - `stevilo.druzin` - meritev: število družin z ustreznim številom otrok v ustrezni občini (število).
+1. `podjetja` - podatki o številu podjetij po regijah
+  - `regija`-spremenljivka: ime regije(character),
+  - `leto` - spremenljivka: leto v katerem gledamo število podjetij (numeric),
+  - `stevilo` - meritev: število podjetij v posamezni regiji(numeric).
 
-2. `obcine` - podatki o občinah
-  - `obcina` - spremenljivka: ime občine (neurejen faktor),
-  - `povrsina` - meritev: površina občine v km$^2$ (število),
-  - `prebivalci` - meritev: prebivalstvo občine (število),
-  - `gostota` - meritev: število prebivalcev na km$^2$ (število),
-  - `naselja` - meritev: število naselij v občini (število),
-  - `ustanovitev` - meritev: leto ustanovitve občine (število),
-  - `pokrajina` - meritev: pokrajina, ki ji občina pripada (neurejen faktor),
-  - `regija` - meritev: regija, ki ji občina pripada (neurejen faktor),
-  - `odcepitev` - meritev: podatki o občinah, od katerih se je občina odcepila (besedilo).
+2. `novonastala podjetja` - podatki o številu na novo ustanovljenih podjetij
+- `regija`-spremenljivka: ime regije(character),
+  - `leto` - spremenljivka: leto v katerem gledamo število na novo ustanovljenih podjetij(numeric),
+  - `stevilo` - meritev: število na novo ustanovlenih podjetij (numeric).
+  
+3. `hitrorastoča podjetja`- podatki o številu podjetij, ki imajo hitro rast
+- `regija`-spremenljivka: ime regije(character),
+  - `leto` - spremenljivka: leto v katerem gledamo število podjetij, ki imajo hitro rast(numeric),
+  - `stevilo` - meritev: število podjetij, ki imajo hitro rast(numeric).
+  
+4. `propadla podjetja`- število podjetij, ki so prenehala z poslovanjem
+- `regija`-spremenljivka: ime regije(character),
+  - `leto` - spremenljivka: leto v katerem gledamo število podjetij,ki so prenehala z poslovanjem(numeric)
+  - `stevilo` - meritev: število podjetij v posamezni regiji, ki so prenehala z poslovanjem(numeric)
+  
+5. `zaposleni` - število zaposlenih v podjetjih v Sloveniji
+-`regija`-spremenljivka: ime regije(character),
+  - `leto` - spremenljivka: leto v katerem gledamo število zaposlenih v podjetjih(numeric)
+  - `stevilo` - meritev: število zaposlenih v podjetjih v posamezni regiji(numeric)
 
-**Opomba**: da bi razpredelnica `obcine` res bila v obliki *tidy data*, bi morali odstraniti stolpec `gostota` (saj je izpeljan iz stolpcev `povrsina` in `prebivalci`), podatke o pokrajinah pa bi morali premakniti v drugo razpredelnico, saj nekatere občine pripadajo dvema pokrajinama. Podobno bi morali narediti tudi s stolpcem `odcepitev`.
+
+Opomba**: da bi razpredelnica `obcine` res bila v obliki *tidy data*, bi morali odstraniti stolpec `gostota` (saj je izpeljan iz stolpcev `povrsina` in `prebivalci`), podatke o pokrajinah pa bi morali premakniti v drugo razpredelnico, saj nekatere občine pripadajo dvema pokrajinama. Podobno bi morali narediti tudi s stolpcem `odcepitev`.
 
 Spodnji graf prikazuje porazdelitev števila naselij v občinah.
 
