--- a/projekt.Rmd
+++ b/projekt.Rmd
@@ -81,9 +81,14 @@ Vir podatkov: [SURS](https://pxweb.stat.si/pxweb/Database/Regije/Regije.asp)
 
 Graf prikazuje število podjetij, ki so prenehala z delovanjem po regijah od leta 2008 do 2016:
 
+```{r vizualizacija, echo=FALSE, message=FALSE, warning=FALSE, results='hide'}
+source("vizualizacija/vizualizacija.r", encoding="UTF-8")
+
+```
+ 
 
 ```{r stevilo_podjetij_ki_so, echo=FALSE, message=FALSE, warning=FALSE, fig.align='center'}
-ggplot(stevilo_podjetij_ki_so_prenehala_z_delovanjem, aes(x=leto, y=stevilopropadlih, group=regije, color=regije)) + geom_line() + xlab("Leto") + ylab("Število podjetij, ki so prenehala z delovanjem") + ggtitle("Graf števila propadlih podjetij") + scale_color_discrete(name="Regije", labels=c("Gorenjska", "Goriška", "Jugovzhodna Slovenija", "Koroška", "Obalno-kraška", "Osrednjeslovenska", "Podravska", "Pomurska", "Posavska", "Primorsko-notranjska", "Savinjska", "Zasavska")) + theme(axis.text.x = element_text(angle = 90, vjust = 0.3, hjust=1))
+mojgraf1
 
 
 ```
@@ -93,11 +98,7 @@ ggplot(stevilo_podjetij_ki_so_prenehala_z_delovanjem, aes(x=leto, y=stevilopropa
 
 
 #Analiza in vizualizacija podatkov
-```{r vizualizacija, echo=FALSE, message=FALSE, warning=FALSE, results='hide'}
-source("vizualizacija/vizualizacija.r", encoding="UTF-8")
 
-```
- 
 Ker so moja rdeča nit podjetja sem se za začetek odločila analizirati število podjetij v Sloveniji od leta  2006 do 2016. Iz grafa lahko vidimo, da je število podjetji v večini slovenskih regij počasi naraščalo. Izjema je Osrednjeslovenska regija,kjer je bila ta rast bolj strma. Razlika med številom podjetij je zelo očitna. Najmanj podjetij je v Zasavski regiji, kar je loigično, saj je tudi najmanjša izmed vseh. Daleč največ pa jih je v Osrednjeslovenski regiji.
 
 Presenetilo me je, da je razlika med številom podjetij v Osrednjeslovenski regiji (v kateri leži glavno mesto Slovenije - Ljubljana) v primerjavi z Pomursko regijo (kjer leži drugo največje mesto Slovenije - Maribor) tako velika. Ti dve regiji sta si po velikosti zelo podobni, število podjetij pa se zelo razlikuje. Leta 2006 je bilo v Osrednjeslovenski regiji 2x več podjetij kakor v Pomurski. Leta 2016 pa kar 3x več.
